250325 detail & domain logo update

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -6,6 +6,8 @@
     <!-- custom CSS & JS -->
     <link rel="stylesheet" href="./styles/detail.css" />
     <script defer src="./js/script.js"></script>
+    <!-- domain icon -->
+    <link rel="icon" type="images/png" href="../logo/logo.png" />
     <title>상세페이지</title>
   </head>
   <body>
