--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" type="images/png" href="./logo/logo.png" />
+    <title>main</title>
   </head>
   <body>
-    <h2>second Commit</h2>
+    <section></section>
   </body>
 </html>
