--- a/login/login.html
+++ b/login/login.html
@@ -3,7 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/81c26bcbac.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- custom css & js -->
+    <link rel="stylesheet" href="./styles/login.css" />
+    <script src="./js/login.js"></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header_event">
+        <p>
+          지금 농담에 가입하고 <b>매일 룰렛 이벤트</b>로 상품 받아 가세요!
+          <i class="fa-solid fa-chevron-right"></i>
+        </p>
+      </div>
+      <div class="header_inner">
+        <div class="header_inner_left">
+          <ul>
+            <li>과일</li>
+            <li>채소</li>
+            <li>가공식품 / 기타</li>
+            <li>이벤트</li>
+          </ul>
+        </div>
+        <div class="header_inner_right">
+          <div class="inner_right_top">
+            <ul>
+              <li>로그인</li>
+              <li>|</li>
+              <li>마이페이지</li>
+              <li>|</li>
+              <li>회원가입</li>
+            </ul>
+          </div>
+          <div class="inner_right_bottom">
+            <div class="search_bar">
+              <input type="text" placeholder="검색어를 입력해주세요." /><i
+                class="fa-solid fa-magnifying-glass"
+              ></i>
+            </div>
+            <div class="basket">
+              <i class="fa-solid fa-cart-shopping"> <p>3</p></i>
+            </div>
+          </div>
+        </div>
+        <div class="header_inner_logo">
+          <img src="/img/logo.png" alt="logo" />
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
