--- a/detail/detail.html
+++ b/detail/detail.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- fontawesome -->
+    <!-- FontAwesome -->
     <script
       src="https://kit.fontawesome.com/9be338970f.js"
       crossorigin="anonymous"
@@ -16,79 +16,332 @@
     <title>상세페이지</title>
   </head>
   <body>
-    <main class="detail_main">
-      <section class="detail_section">
-        <figure class="detail_figure">
-          <img
-            class="detail_image"
-            src="https://placehold.co/560x560"
-            alt="유기농 찰토마토"
-          />
+    <main class="detail_container">
+      <!-- 상품 기본 정보 -->
+      <section class="detail_info">
+        <figure class="info_img">
+          <img src="https://placehold.co/560x560" alt="placehold" />
         </figure>
-        <article class="detail_article">
-          <header class="detail_header">
-            <h2 class="detail_title">유기농 찰토마토 2kg</h2>
-            <p class="detail_subtitle">탄탄하고 찰진 식감의 유기농 토마토</p>
+        <article class="img_info">
+          <header class="info_title">
+            <h1>유기농 찰토마토 2kg</h1>
+            <p>탄탄하고 찰진 식감의 유기농 토마토</p>
           </header>
-          <section class="detail_price">
-            <p>
-              <span class="detail_discount"
-                >29<span class="discount_percent">%</span></span
-              >
-              <span class="detail_final-price"
-                >25,489<span class="price_won">원</span></span
-              >
-            </p>
-            <p class="detail_original-price">
-              <del>원가 35,900원</del>
-            </p>
+          <section class="info_price">
+            <span class="price_one">29<span class="price_sub">%</span></span>
+            <span class="price_two"
+              >25,489<span class="price_sub">원</span></span
+            >
+            <div class="price_three"><del>원가 35,900원</del></div>
           </section>
-          <section class="detail_review">
-            <span>
-              <i class="fas fa-star"></i>
-              <span class="detail_rating">4.2</span>
-              <span class="detail_view">리뷰:</span> 232건
-              <p><strong>원산지:</strong> 국산</p>
-            </span>
+          <div class="info_review">
+            <i class="fas fa-star"></i>
+            <span class="review_rating"> 4.2 </span>
+            <span class="review_re">리뷰: </span
+            ><span class="review_few">232건</span>
+            <p>원산지: 국산</p>
+          </div>
+          <div class="info_btns">
+            <button class="organic_btn">유기농</button>
+            <button class="event_btn">이벤트</button>
+          </div>
+          <section class="info_option">
+            <table>
+              <tbody>
+                <tr>
+                  <th>재배환경</th>
+                  <td>무농약, 화학농약X, 생장촉진제X</td>
+                </tr>
+                <tr>
+                  <th>판매단위</th>
+                  <td>1팩</td>
+                </tr>
+                <tr>
+                  <th>배송비</th>
+                  <td>무료 배송</td>
+                </tr>
+                <tr>
+                  <th>배송</th>
+                  <td>
+                    23시 전 주문 시 수도권/충청 내일 아침 7시 전 도착<br />(그
+                    외 지역 아침 8시 전 도착)
+                  </td>
+                </tr>
+                <tr>
+                  <th>안내사항</th>
+                  <td>
+                    신선식품 특성상 크기 및 형태 차이가 있을 수 있습니다.<br />3%
+                    중량 차이가 있을 수 있습니다.
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </section>
-          <section class="detail_origin"></section>
-          <section class="detail_info">
-            <ul class="detail_list">
-              <li>
-                <strong>재배환경:</strong>
-                <span>무농약, 화학농약X, 생장촉진제X</span>
-              </li>
-              <li>
-                <strong>판매단위:</strong>
-                <span>1팩</span>
-              </li>
-              <li>
-                <strong>배송비:</strong>
-                <span>무료 배송</span>
-              </li>
-              <li>
-                <strong>배송:</strong>
-                <span>
-                  23시 전 주 시 수도권/충청 내일 아침 7시 전 도착<br />(그 외
-                  지역 아침 8시 전 도착)
-                </span>
-              </li>
-              <li>
-                <strong>안내사항:</strong>
-                <span>
-                  신선식품 특성상 원물마다 크기 및 형태가 일정하지 않을 수
-                  있습니다.<br />신선식품 특성상 3% 중량의 차이가 있을 수
-                  있습니다.
-                </span>
-              </li>
-            </ul>
-          </section>
-          <footer class="detail_footer">
-            <button class="detail_button" type="button">장바구니에 담기</button>
-          </footer>
+          <div class="info_purchase">
+            <button>장바구니에 담기</button>
+          </div>
         </article>
       </section>
-      <!-- 추가적인 4개 섹션이 여기에 들어갑니다 -->
+      <hr class="detail_line" />
+      <!-- 리뷰 섹션 -->
+      <section class="detail_review">
+        <div class="detail_content">
+          <div class="review_text">
+            <span class="text_review">리뷰</span>
+            <span class="text_few">232건</span>
+          </div>
+          <div class="review_star">
+            <span class="star">평균 별점</span>
+            <span class="rating"><span class="rating_one">4.2</span> / 5</span>
+          </div>
+          <div class="review_member">
+            <div>
+              <p>
+                김 * 연
+                <span>★★★★★</span>
+              </p>
+              <div class="member_content">
+                <img src="https://placehold.co/100x100" alt="리뷰 이미지" />
+                <div>
+                  <span>
+                    못난이들도 있긴 하지만.. 전체적으로 너무 이뻐요!! 이런
+                    상품들이 선택받지 못하고 버려진다는게 너무 마음아프네요..😢
+                    배송도 빠르고 상품이 너무 좋아요!! 정기배송 시켜볼
+                    생각이에요!!
+                  </span>
+                  <p>2025.03.10 | 오돌토돌 개성만점 유기농토마토 2kg</p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <p>
+                이 * 진
+                <span>★★★★☆</span>
+              </p>
+              <div class="member_content">
+                <img src="https://placehold.co/100x100" alt="리뷰 이미지" />
+                <div>
+                  <span>
+                    다들 너무 싱싱하고 좋았어요. 못난이가 어디있나 찾아도 못
+                    찾겠어요. ^^ 샐러드 박스는 저에게 주는 선물 같은 정기배송
+                    시켜봤는데 선한데 감자도 달달포슬한 편이고 버섯도 세가지
+                    종류나
+                  </span>
+                  <p>2025.01.02 | 오돌토돌 개성만점 유기농토마토 2kg</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="review_more">232건 리뷰 더 보기 ></button>
+        </div>
+      </section>
+      <hr class="detail_line" />
+      <!-- 상품 상세 섹션 -->
+      <section class="detail_product">
+        <div class="product_title">
+          <h1>상품 설명</h1>
+          <img src="https://placehold.co/1050x683" alt="토마토 이미지" />
+        </div>
+        <div class="product_thumb">
+          <div class="thumb_one">
+            <div>
+              <p>1</p>
+              <h4>Lorem, ipsum dolor.</h4>
+              <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+                assumenda eius. Nostrum totam atque, nobis nulla ratione
+                excepturi assumenda veniam?
+              </span>
+            </div>
+            <img src="https://placehold.co/200x200" alt="thumb" />
+          </div>
+          <div class="thumb_one">
+            <div>
+              <p>2</p>
+              <h4>Lorem, ipsum dolor.</h4>
+              <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+                assumenda eius. Nostrum totam atque, nobis nulla ratione
+                excepturi assumenda veniam?
+              </span>
+            </div>
+            <img src="https://placehold.co/200x200" alt="thumb" />
+          </div>
+          <div class="thumb_one">
+            <div>
+              <p>3</p>
+              <h4>Lorem, ipsum dolor.</h4>
+              <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+                assumenda eius. Nostrum totam atque, nobis nulla ratione
+                excepturi assumenda veniam?
+              </span>
+            </div>
+            <img src="https://placehold.co/200x200" alt="thumb" />
+          </div>
+          <div class="thumb_one">
+            <div>
+              <p>4</p>
+              <h4>Lorem, ipsum dolor.</h4>
+              <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+                assumenda eius. Nostrum totam atque, nobis nulla ratione
+                excepturi assumenda veniam?
+              </span>
+            </div>
+            <img src="https://placehold.co/200x200" alt="thumb" />
+          </div>
+        </div>
+      </section>
+      <hr class="detail_line" />
+      <!-- 문의 섹션 -->
+      <section class="detail_faq">
+        <div class="faq_title">
+          <span>문의</span>
+          <button>문의하기</button>
+        </div>
+        <div class="faq_subTitle">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+          rem iste distinctio eius enim modi ullam ipsum tempora consectetur, ut
+          dolorem veniam pariatur error accusantium sunt, eos repellat ducimus
+          delectus?
+        </div>
+        <table>
+          <tr>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>작성일</th>
+            <th>상태</th>
+          </tr>
+          <tr>
+            <td>배송 관련 문의 <i class="fas fa-lock"></i></td>
+            <td>이*일</td>
+            <td>2025.03.15</td>
+            <td>답변완료</td>
+          </tr>
+          <tr>
+            <td>상품 상태 문의 <i class="fas fa-lock"></i></td>
+            <td>송*관</td>
+            <td>2025.02.02</td>
+            <td>답변완료</td>
+          </tr>
+          <tr>
+            <td>환불 가능 여부 <i class="fas fa-lock"></i></td>
+            <td>최*연</td>
+            <td>2025.01.13</td>
+            <td>답변완료</td>
+          </tr>
+          <tr>
+            <td>환불 가능 여부 <i class="fas fa-lock"></i></td>
+            <td>장*아</td>
+            <td>2025.01.12</td>
+            <td>답변완료</td>
+          </tr>
+          <tr>
+            <td>환불 가능 여부 <i class="fas fa-lock"></i></td>
+            <td>박*진</td>
+            <td>2024.12.23</td>
+            <td>답변완료</td>
+          </tr>
+        </table>
+        <div class="faq_number">
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>4</div>
+          <div>5</div>
+        </div>
+      </section>
+      <hr class="detail_line" />
+      <!-- 보상정책 -->
+      <section class="detail_policy">
+        <div>
+          <h1>사고보상정책</h1>
+          <p>
+            받아보신 상품에 이상이 있으신가요? 아래 절차에 따라 요청을
+            남겨주시면 빠르게 도와드리겠습니다.
+          </p>
+        </div>
+
+        <!-- 사고 보상 요청 방법 섹션 -->
+        <section>
+          <h2>사고 보상 요청 방법</h2>
+          <table>
+            <tr>
+              <td colspan="2">
+                상품을 받으신 직후 상태를 확인해주세요. 이상이 있는 부분이
+                있다면 사진을 촬영해주세요.
+              </td>
+            </tr>
+            <tr>
+              <td>수령 후 1일 이내에 접수가 가능합니다.</td>
+              <td>파손 사고 시 배송 송장 사진도 함께 촬영해주세요.</td>
+            </tr>
+            <tr>
+              <td>문제 부분을 확인할 수 있도록 3~4장 이상 촬영해주세요.</td>
+              <td>
+                사진은 이상이 있는 부분과 없는 부분 전체를 확인할 수 있어야
+                해요.
+              </td>
+            </tr>
+            <tr>
+              <td>
+                홈페이지 로그인 후 마이페이지 / 챗봇에 사진과 함께 접수해주세요.
+              </td>
+              <td>
+                마이페이지 > 주문내역 > 교환/환불 문의를 통해 접수가 가능합니다.
+              </td>
+            </tr>
+            <tr>
+              <td>챗봇 > 메뉴 선택 후 문의 접수 가능합니다.</td>
+              <td>검토 후 처리 결과를 홈페이지 및 문자 알림으로 알려드려요.</td>
+            </tr>
+            <tr>
+              <td colspan="2">
+                접수 완료 후 1 ~ 3일 내 처리하여 문자 알림 및 홈페이지를 통해
+                알려드립니다.
+              </td>
+            </tr>
+          </table>
+        </section>
+
+        <!-- 사고 보상이 불가한 경우 섹션 -->
+        <section>
+          <h2>사고 보상이 불가한 경우</h2>
+          <table>
+            <tr>
+              <td>1) 수령 후 단순 변심, 기호 등에 의한 요청인 경우</td>
+            </tr>
+            <tr>
+              <td>2) 수령 후 1일 이상 경과, 제품의 30%이상 섭취 한 경우</td>
+            </tr>
+            <tr>
+              <td>
+                3) 접수내용에 사진이 첨부되지 않아 품질 문제를 확인하기 어려운
+                경우
+              </td>
+            </tr>
+            <tr>
+              <td>
+                4) 고객의 책임(지연 개봉, 부적절한 보관 방법 등)으로 상품이 손실
+                또는 훼손 된 경우
+              </td>
+            </tr>
+            <tr>
+              <td>5) 수령 후 시간이 지나 상품 가치가 현저히 감소한 경우</td>
+            </tr>
+            <tr>
+              <td>6) 연락처 및 주소를 잘못 기입하여 배송 사고가 일어난 경우</td>
+            </tr>
+            <tr>
+              <td>7) 상품 상세 페이지에 안내되어 있는 내용인 경우</td>
+            </tr>
+            <tr>
+              <td>8) 택배사 배송 완료 후 상품이 분실된 경우</td>
+            </tr>
+          </table>
+        </section>
+      </section>
     </main>
   </body>
 </html>
