--- a/detail/detail.html
+++ b/detail/detail.html
@@ -255,92 +255,116 @@
       <hr class="detail_line" />
       <!-- 보상정책 -->
       <section class="detail_policy">
-        <div>
+        <div class="policy_title">
           <h1>사고보상정책</h1>
           <p>
             받아보신 상품에 이상이 있으신가요? 아래 절차에 따라 요청을
             남겨주시면 빠르게 도와드리겠습니다.
           </p>
         </div>
-
-        <!-- 사고 보상 요청 방법 섹션 -->
-        <section>
-          <h2>사고 보상 요청 방법</h2>
-          <table>
-            <tr>
-              <td colspan="2">
-                상품을 받으신 직후 상태를 확인해주세요. 이상이 있는 부분이
-                있다면 사진을 촬영해주세요.
-              </td>
-            </tr>
-            <tr>
-              <td>수령 후 1일 이내에 접수가 가능합니다.</td>
-              <td>파손 사고 시 배송 송장 사진도 함께 촬영해주세요.</td>
-            </tr>
-            <tr>
-              <td>문제 부분을 확인할 수 있도록 3~4장 이상 촬영해주세요.</td>
-              <td>
-                사진은 이상이 있는 부분과 없는 부분 전체를 확인할 수 있어야
-                해요.
-              </td>
-            </tr>
-            <tr>
-              <td>
+        <div class="policy_contents">
+          <!-- 사고 보상 요청 방법 섹션 -->
+          <section class="policy_first">
+            <h2>사고 보상 요청 방법</h2>
+            <p>
+              <strong>
+                상품을 받으신 직후 상태를 확인해주세요.<br />
+                이상이 있는 부분이 있다면 사진을 촬영해주세요.
+              </strong>
+            </p>
+            <ul>
+              <li>&#8226; 수령 후 1일 이내에 접수가 가능합니다.</li>
+              <li>&#8226; 파손 사고 시 배송 송장 사진도 함께 촬영해주세요.</li>
+              <li>
+                &#8226; 문제 부분을 확인할 수 있도록 3~4장 이상 촬영해주세요.
+              </li>
+              <li>
+                &#8226; 사진은 이상이 있는 부분과 없는 부분 전체를 확인할 수
+                있어야 해요.
+              </li>
+            </ul>
+            <p>
+              <strong>
                 홈페이지 로그인 후 마이페이지 / 챗봇에 사진과 함께 접수해주세요.
-              </td>
-              <td>
-                마이페이지 > 주문내역 > 교환/환불 문의를 통해 접수가 가능합니다.
-              </td>
-            </tr>
-            <tr>
-              <td>챗봇 > 메뉴 선택 후 문의 접수 가능합니다.</td>
-              <td>검토 후 처리 결과를 홈페이지 및 문자 알림으로 알려드려요.</td>
-            </tr>
-            <tr>
-              <td colspan="2">
-                접수 완료 후 1 ~ 3일 내 처리하여 문자 알림 및 홈페이지를 통해
-                알려드립니다.
-              </td>
-            </tr>
-          </table>
-        </section>
+              </strong>
+            </p>
 
-        <!-- 사고 보상이 불가한 경우 섹션 -->
-        <section>
-          <h2>사고 보상이 불가한 경우</h2>
-          <table>
-            <tr>
-              <td>1) 수령 후 단순 변심, 기호 등에 의한 요청인 경우</td>
-            </tr>
-            <tr>
-              <td>2) 수령 후 1일 이상 경과, 제품의 30%이상 섭취 한 경우</td>
-            </tr>
-            <tr>
-              <td>
-                3) 접수내용에 사진이 첨부되지 않아 품질 문제를 확인하기 어려운
-                경우
-              </td>
-            </tr>
-            <tr>
-              <td>
-                4) 고객의 책임(지연 개봉, 부적절한 보관 방법 등)으로 상품이 손실
-                또는 훼손 된 경우
-              </td>
-            </tr>
-            <tr>
-              <td>5) 수령 후 시간이 지나 상품 가치가 현저히 감소한 경우</td>
-            </tr>
-            <tr>
-              <td>6) 연락처 및 주소를 잘못 기입하여 배송 사고가 일어난 경우</td>
-            </tr>
-            <tr>
-              <td>7) 상품 상세 페이지에 안내되어 있는 내용인 경우</td>
-            </tr>
-            <tr>
-              <td>8) 택배사 배송 완료 후 상품이 분실된 경우</td>
-            </tr>
-          </table>
-        </section>
+            <ul>
+              <li>
+                &#8226; 마이페이지 &gt; 주문내역 &gt; 교환/환불 문의를 통해
+                접수가 가능합니다.
+              </li>
+              <li>&#8226; 챗봇 &gt; 메뉴 선택 후 문의 접수 가능합니다.</li>
+            </ul>
+            <p>
+              <strong>
+                검토 후 처리 결과를 홈페이지 및 문자 알림으로 알려드려요.
+              </strong>
+            </p>
+            <ul>
+              <li>
+                &#8226; 접수 완료 후 1 ~ 3일 내 처리하여 문자 알림 및 홈페이지를
+                통해 알려드립니다.
+              </li>
+            </ul>
+          </section>
+          <!-- 사고 보상이 불가한 경우 섹션 -->
+          <section class="policy_last">
+            <h2>사고 보상이 불가한 경우</h2>
+            <table>
+              <tr>
+                <td>
+                  <strong>1)</strong>
+                  수령 후 단순 변심, 기호 등에 의한 요청인 경우
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>2)</strong>
+                  수령 후 1일 이상 경과, 제품의 30%이상 섭취 한 경우
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>3)</strong>
+                  접수내용에 사진이 첨부되지 않아 품질 문제를 확인하기 어려운
+                  경우
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>4)</strong>
+                  고객의 책임(지연 개봉, 부적절한 보관 방법 등)으로 상품이 손실
+                  또는 훼손 된 경우
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>5)</strong>
+                  수령 후 시간이 지나 상품 가치가 현저히 감소한 경우
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>6)</strong>
+                  연락처 및 주소를 잘못 기입하여 배송 사고가 일어난 경우
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>7)</strong>
+                  상품 상세 페이지에 안내되어 있는 내용인 경우
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>8)</strong>
+                  택배사 배송 완료 후 상품이 분실된 경우
+                </td>
+              </tr>
+            </table>
+          </section>
+        </div>
       </section>
     </main>
   </body>
