--- a/index.html
+++ b/index.html
@@ -16,6 +16,47 @@
     <title>main</title>
   </head>
   <body>
+    <header>
+      <div class="header_event">
+        <p>
+          지금 농담에 가입하고 <b>매일 룰렛 이벤트</b>로 상품 받아 가세요!
+          <i class="fa-solid fa-chevron-right"></i>
+        </p>
+      </div>
+      <div class="header_inner">
+        <div class="header_inner_left">
+          <ul>
+            <li>과일</li>
+            <li>채소</li>
+            <li>가공식품 / 기타</li>
+            <li>이벤트</li>
+          </ul>
+        </div>
+        <div class="header_inner_right">
+          <div class="inner_right_top">
+            <ul>
+              <li>로그인</li>
+              <p>|</p>
+              <li>마이페이지</li>
+              <p>|</p>
+              <li>회원가입</li>
+            </ul>
+          </div>
+          <div class="inner_right_bottom">
+            <div class="search_bar">
+              <input type="text" placeholder="검색어를 입력해주세요." />
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <div class="basket">
+              <i class="fa-solid fa-cart-shopping"> <p>3</p></i>
+            </div>
+          </div>
+        </div>
+        <div class="header_inner_logo">
+          <img src="./login/login_imgs/logo.png" alt="logo" />
+        </div>
+      </div>
+    </header>
     <main>
       <section id="main_con1">
         <div class="main_inner">
@@ -612,5 +653,39 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="footer_inner">
+        <div class="footer_inner_left">
+          <img src="./login/login_imgs/logo_02.png" alt="logo_02" />
+          <p>ⓒ 농담 All rights reserved</p>
+        </div>
+        <div class="footer_inner_center">
+          <ul>
+            <li>법인명 (상호) : 주식회사 농담 | 대표이사 : 송명관</li>
+            <li>사업자등록번호 : 123-45-67890</li>
+            <li>주소지 : 서울시 서초구 서초대로77길 41 대동2빌딩 9층</li>
+            <li>서비스 이용약관 | 개인정보 처리방침</li>
+          </ul>
+        </div>
+        <div class="footer_inner_right">
+          <div class="inner_right_top">
+            <ul>
+              <li>고객센터</li>
+              <li>02-1234-5678</li>
+            </ul>
+          </div>
+          <div class="inner_right_bottom">
+            <ul class="right_bottom_left">
+              <li>고객센터 운영시간 :</li>
+              <li>(운영시간에 순차적 답변)</li>
+            </ul>
+            <ul class="right_bottom_right">
+              <li>월 ~ 토요일 | 오전 7시 ~ 오후 6시</li>
+              <li>일 & 공휴일 | 오전 7시 ~ 오후 4시</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
