header & footer moved

--- a/login/find.html
+++ b/login/find.html
@@ -11,7 +11,9 @@
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/find.css" />
     <script src="./js/find.js"></script>
-    <title>Document</title>
+    <!-- domain icon -->
+    <link rel="icon" type="images/png" href="../logo/logo.png" />
+    <title>계정 찾기</title>
   </head>
   <body>
     <header>
@@ -51,7 +53,7 @@
           </div>
         </div>
         <div class="header_inner_logo">
-          <img src="./img/logo.png" alt="logo" />
+          <img src="../imgs/logo.png" alt="logo" />
         </div>
       </div>
     </header>
@@ -90,7 +92,7 @@
     <footer>
       <div class="footer_inner">
         <div class="footer_inner_left">
-          <img src="/img/logo_02.png" alt="logo_02" />
+          <img src="../imgs/logo_02.png" alt="logo_02" />
           <p>ⓒ 농담 All rights reserved</p>
         </div>
         <div class="footer_inner_center">
