--- a/login/login.html
+++ b/login/login.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/81c26bcbac.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- custom css & js -->
+    <link rel="stylesheet" href="./styles/login.css" />
+    <script src="./js/login.js"></script>
     <title>Document</title>
   </head>
   <body></body>
