--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       </div>
     </header>
     <main>
+      <section id="tttt"></section>
       <section id="main_con1">
         <div class="main_inner">
           <h1>농담이 자신있게 추천해요</h1>
@@ -208,9 +209,31 @@
           </div>
         </div>
       </section>
+      <section id="main_banner">
+        <img src="./imgs/banner1.png" alt="banner1" />
+        <div class="banner_text">
+          <div class="banner_tag">
+            <span>지구를 위해 건강을 위해</span>
+            <div class="banner_title">
+              <h2>못생겨도 괜찮아!</h2>
+              <p>농부만의 소싱철학 알아보기 ></p>
+            </div>
+          </div>
+          <div class="banner_text1">
+            <p>
+              농산물의 품질은 외형이 아닌 <b>신선함, 맛</b><br />그리고
+              <b>건강한 생산 과정</b>에 있다는 믿음으로<br />
+              <b>“농부”</b>가 탄생했습니다.
+            </p>
+          </div>
+        </div>
+      </section>
       <section id="main_con2">
         <div class="main_inner">
-          <h1>신상품 <img src="./imgs/main_arrow.png" alt="arrow" /></h1>
+          <div class="main_con2title">
+            <h1>신상품</h1>
+            <img src="./imgs/main_arrow.png" alt="arrow" />
+          </div>
           <div class="main_it">
             <div class="main_type1">
               <div class="img"></div>
@@ -435,7 +458,7 @@
       </section>
       <section id="main_con4">
         <div class="main_inner">
-          <div class="line"></div>
+          <hr />
           <div class="main_sale_title">
             <h1>오늘의 특가상품 ✨</h1>
             <div class="sale_time">03:27:24</div>
