--- a/eventpromotion/event.html
+++ b/eventpromotion/event.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/variables.css" />
     <link rel="stylesheet" href="./styles/event.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/header.css" />
     <script defer src="./js/script.js"></script>
     <title>Event page</title>
   </head>
