--- a/login/find.html
+++ b/login/find.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/81c26bcbac.js"
@@ -11,6 +12,9 @@
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/find.css" />
     <script src="./js/find.js"></script>
+    <!-- media screen -->
+    <link rel="stylesheet" href="./styles/res_find.css" />
+    <link rel="stylesheet" href="../styles/res_header.css" />
     <!-- domain icon -->
     <link rel="icon" type="images/png" href="../logo/logo.png" />
     <title>계정 찾기</title>
@@ -30,6 +34,11 @@
             <li>채소</li>
             <li>가공식품 / 기타</li>
             <li>이벤트</li>
+            <div class="header_menu_trigger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </ul>
         </div>
         <div class="header_inner_right">
