--- a/login/login.html
+++ b/login/login.html
@@ -11,6 +11,8 @@
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/login.css" />
     <script src="./js/login.js"></script>
+    <!-- response -->
+    <link rel="stylesheet" href="./styles/res_login.css" />
     <!-- domain icon -->
     <link rel="icon" type="images/png" href="../logo/logo.png" />
     <title>로그인</title>
@@ -65,7 +67,7 @@
             <input type="text" placeholder="아이디를 입력해주세요." />
             <div class="login_pw">
               <input type="password" placeholder="비밀번호를 입력해주세요." />
-              <i class="fas fa-eye"></i>
+              <i class="fas fa-eye-slash"></i>
             </div>
           </div>
           <button>로그인</button>
