--- a/login/mypage.html
+++ b/login/mypage.html
@@ -11,6 +11,8 @@
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/mypage.css" />
     <script src="./js/mypage.js"></script>
+    <!-- response -->
+    <link rel="stylesheet" href="./styles/res_mypage.css" />
     <!-- domain icon -->
     <link rel="icon" type="images/png" href="../logo/logo.png" />
     <title>마이페이지</title>
