250407 trigger add update

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -11,6 +11,7 @@
     <!-- custom CSS & JS -->
     <link rel="stylesheet" href="./styles/detail.css" />
     <script defer src="./js/detail.js"></script>
+    <script defer src="../common.js"></script>
     <!-- Media Screen -->
     <link rel="stylesheet" href="./styles/res_detail.css" />
     <!-- domain icon -->
@@ -26,6 +27,22 @@
         </p>
       </div>
       <div class="header_inner">
+        <!-- trigger start -->
+        <nav>
+          <ul class="gnb">
+            <li><a href="#">과일</a></li>
+            <li><a href="#">채소</a></li>
+            <li><a href="#">가공식품/기타</a></li>
+            <li><a href="#">이벤트</a></li>
+          </ul>
+        </nav>
+        <div class="trigger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <!-- trigger end -->
+
         <div class="header_inner_left">
           <ul>
             <li>과일</li>
@@ -445,7 +462,7 @@
     <footer>
       <div class="footer_inner">
         <div class="footer_inner_left">
-          <img src="./detail_imgs/logo_02.png" alt="logo_02" />
+          <img src="../imgs/logo_02.png" alt="logo_02" />
           <p>ⓒ 농담 All rights reserved</p>
         </div>
         <div class="footer_inner_center">
