--- a/login/mypage.html
+++ b/login/mypage.html
@@ -10,7 +10,7 @@
     ></script>
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/mypage.css" />
-    <script src="./js/mypage.js"></script>
+    <script defer src="./js/mypage.js"></script>
     <!-- response -->
     <link rel="stylesheet" href="./styles/res_mypage.css" />
     <!-- domain icon -->
@@ -78,7 +78,10 @@
                 <p class="mypage_id">nmixx**@naver.com</p>
               </li>
               <li>
-                <p class="mypage_pw">********</p>
+                <div id="pw">
+                  <p class="mypage_pw">********</p>
+                  <i class="fas fa-eye-slash"></i>
+                </div>
                 <button class="mypage_modify">수정</button>
               </li>
               <li>
