--- a/login/login.html
+++ b/login/login.html
@@ -10,7 +10,7 @@
     ></script>
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/login.css" />
-    <script src="./js/login.js"></script>
+    <script defer src="./js/login.js"></script>
     <!-- response -->
     <link rel="stylesheet" href="./styles/res_login.css" />
     <!-- domain icon -->
@@ -64,9 +64,13 @@
         <section class="login_01">
           <h2>로그인</h2>
           <div class="login_input">
-            <input type="text" placeholder="아이디를 입력해주세요." />
+            <input id="id" type="text" placeholder="아이디를 입력해주세요." />
             <div class="login_pw">
-              <input type="password" placeholder="비밀번호를 입력해주세요." />
+              <input
+                id="pw"
+                type="password"
+                placeholder="비밀번호를 입력해주세요."
+              />
               <i class="fas fa-eye-slash"></i>
             </div>
           </div>
