--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
             <div class="sale_time">03:27:24</div>
           </div>
           <ul class="main_it">
-            <li class="main_type2">
+            <!-- <li class="main_type2">
               <div class="img">
                 <img src="./imgs/item1.png" alt="item1" />
                 <button>10% 할인</button>
@@ -833,7 +833,7 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </section>
