--- a/login/mypage.html
+++ b/login/mypage.html
@@ -11,6 +11,7 @@
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/mypage.css" />
     <script defer src="./js/mypage.js"></script>
+    <script defer src="../common.js"></script>
     <!-- response -->
     <link rel="stylesheet" href="./styles/res_mypage.css" />
     <!-- domain icon -->
@@ -36,13 +37,7 @@
         </div>
         <div class="header_inner_right">
           <div class="inner_right_top">
-            <ul>
-              <li>로그인</li>
-              <p>|</p>
-              <li>마이페이지</li>
-              <p>|</p>
-              <li>회원가입</li>
-            </ul>
+            <ul class="header_login"></ul>
           </div>
           <div class="inner_right_bottom">
             <div class="search_bar">
