--- a/login/sign.html
+++ b/login/sign.html
@@ -11,6 +11,7 @@
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/sign.css" />
     <script defer src="./js/sign.js"></script>
+    <script defer src="../common.js"></script>
     <!-- response -->
     <link rel="stylesheet" href="./styles/res_sign.css" />
     <!-- domain icon -->
